[package]
name = "lpm"
version = "0.4.0"
edition = "2021"

[dependencies]
toml = "0.9.2"
serde = { version = "1.0.215", features = ["derive"] }
colored = "3.0.0"
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
mlua = { version = "0.10.2", features = ["lua54", "vendored"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
git2 = "0.20.0"
regex = "1.11.1"
walkdir = "2.5.0"
clippers = "0.1.2"
sha2 = "0.10.8"